...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView

            android:id="@+id/following_request_custom"
            android:layout_width="wrap_content"
            android:layout_height="615dp" />


    </FrameLayout>

...
