...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ListView
            android:id="@+id/follower_list_custom"
            android:layout_width="wrap_content"
            android:layout_height="615dp" />


    </FrameLayout>

...
