<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright [2021] [Reham Albakouni, Matt Asgari Motlagh, Aidan Horemans, Courtenay Laing-Kobe, Vivek Malhotra, Kelly Shih]

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/privacySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pub"
        android:textOn="@string/pub"
        android:textOff="@string/priv"/>

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_title"
        android:maxLength="40"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reason_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reason"
        android:inputType="textPersonName" />

    <LinearLayout
        android:id="@+id/day_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:id="@+id/monday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m">
        </CheckBox>
        <CheckBox
            android:id="@+id/tuesday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t">
        </CheckBox>
        <CheckBox
            android:id="@+id/wednesday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w">
        </CheckBox>
        <CheckBox
            android:id="@+id/thursday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t">
        </CheckBox>
        <CheckBox
            android:id="@+id/friday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f">
        </CheckBox>
        <CheckBox
            android:id="@+id/saturday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s">
        </CheckBox>
        <CheckBox
            android:id="@+id/sunday_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s">
        </CheckBox>
    </LinearLayout>



</LinearLayout>
