...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".habit.ViewHabitActivity">

    <TextView
        android:id="@+id/tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp"
...
        app:layout_constraintTop_toBottomOf="@id/habit_days"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/reason"/>

    <TextView
        android:id="@+id/habit_reason"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reason"
        android:layout_marginHorizontal="10dp"/>

...
