<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_habit"
        android:title=""
        android:icon="@drawable/ic_round_edit_24"
        android:orderInCategory="100"
        app:showAsAction="always"/>

</menu>